# research-vault

./: .gitignore  CLAUDE.md  CONTEXT.md  profile.md  pyproject.toml
.claude/: settings.json
.obsidian/: community-plugins.json  graph.json
.research/: README.md  link_index.json  manifest.json  topic_state.json
areas/: beliefs-forecasting-elicitation.md  bounded-rationality-choice.md  contracts-incentives-personnel.md  decision-under-risk-time.md  econometrics-machine-learning.md  industrial-organization-markets.md  social-other-regarding-preferences.md
docs/: architecture.md  how-it-works.md
ideas/: README.md  idea-harvest-2026-05-31.md
literature/: @2006.md  @Abeler2011.md  @Ackerberg2002.md  @Aggarwal1999.md  @Aggarwal2002.md  @Aggarwal2016.md  @Aggarwal2018.md  @Aghion1997.md  @Akerlof1970.md  @Akerlof1982.md  @Akerlof2000.md  @Akoz2020.md  @Allen2017.md  @Alos-Ferrer2021.md  @Andersen2012.md  @Andreoni2002.md  @Andrews2022.md  @Antilla2010.md  @Apesteguia2005.md  @Apesteguia2013.md  @Arieli2011.md  @Ariely2000.md  @Ariely2009.md  @Armantier2013.md  @Armouti-Hansen2018.md  @Armouti-Hansen2022.md  @Armouti-Hansen2024.md  @Armouti-Hansen2024a.md  @Armouti-Hansen2024b.md  @Armouti-Hansen2026a.md  @Armouti-Hansen2026b.md  @Arteaga2022.md  @Asch1955.md  @Athey2019.md  @Au2011.md  @Bagwell2007.md  @Baigent1996.md  @Baillon2020.md  @Bajraj2015.md  @Baker2023.md  (+464 more)
projects/: README.md
topics/: README.md  adverse-selection-intermediation.md  advertising-signaling-quality.md  advice-misselling-disclosure.md  anticipatory-utility-motivated-beliefs.md  (+34 more)
(+39 files in other folders)
